# nesdot

./: .editorconfig  .eslintrc.json  .gitignore  .prettierignore  AGENTS.md  README.md  eslint.config.js  fix_csp.py  flake.nix  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsconfig.node.json  tsconfig.type-safety.json  vite.config.ts
.github/: CODEOWNERS
docs/: bg-edit-mode-design.md  csp-style-src-hardening-todo.md  development-manual.md  emotion-removal-migration-plan.md  nesdev-screen-rendering-context.md  plain-mui-migration-prep.md  release-checklist.md  static-css-architecture.md  static-styling-status.md  style-runtime-transition-notes.md
e2e/: bg-mode.spec.ts  character-mode.spec.ts  console.spec.ts  palette-picker.spec.ts  screen-mode.spec.ts  sprite-mode.spec.ts  theme.spec.ts  update-dialog.spec.ts
scripts/: capture-readme-screenshots.mjs  cve-audit-baseline.json  doctor-wsl.mjs  ensure-tauri-dev-server.mjs  install-pre-commit-hook.sh  license-policy.mjs  release-automation.mjs  release-semver.d.ts  release-semver.mjs  sync-flake-pnpm-deps-hash.mjs  sync-icons.sh  system-library-policy.mjs  verify-cves.mjs  verify-licenses.mjs  verify-no-invisible-chars.mjs  verify-security.mjs  verify-system-libraries.mjs  verify-tauri-csp-core.mjs  verify-tauri-csp-if-supported.mjs  verify-tauri-csp.mjs
src/: App.styles.tsx  App.tsx  app.tsx  index.ts  (+3 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+727 files in other folders)
