[package]
name = "nesdot"
version = "0.1.6"
description = "NESDOT desktop app powered by Tauri"
authors = ["paseri3739 <tael43@icloud.com>"]
edition = "2021"

[lib]
name = "nesdot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
